@@ -2,12 +2,14 @@ package com.grepp.nbe562team04.model.user;
 
 import com.grepp.nbe562team04.model.achieve.AchievementService;
 import com.grepp.nbe562team04.model.auth.code.Role;
-import com.grepp.nbe562team04.model.auth.domain.Principal;
+import com.grepp.nbe562team04.model.interest.InterestRepository;
+import com.grepp.nbe562team04.model.interest.entity.Interest;
 import com.grepp.nbe562team04.model.level.LevelRepository;
 import com.grepp.nbe562team04.model.level.entity.Level;
 import com.grepp.nbe562team04.model.user.dto.UserDto;
 import com.grepp.nbe562team04.model.user.entity.User;
 
+import com.grepp.nbe562team04.model.user.entity.UserInterest;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -42,26 +44,28 @@ public class UserService implements UserDetailsService{
     private final PasswordEncoder passwordEncoder;
     private final ModelMapper mapper;
     private final LevelRepository levelRepository;
+    private final InterestRepository interestRepository;
+    private final UserInterestRepository userInterestRepository;
     private final AchievementService achievementService;
 
-    @Transactional
-    public void signup(UserDto dto, Role role){
+@Transactional
+public Long signup(UserDto dto, Role role){
+    User user = mapper.map(dto, User.class);
+    Level defaultLevel = levelRepository.findFirstByOrderByLevelIdAsc()
+        .orElseThrow(() -> new IllegalStateException("기본 레벨이 존재하지 않습니다."));
 
-//        if (userRepository.existsById(dto.getUserId()))
-//            throw new CommonException(ResponseCode.BAD_REQUEST);
+    String encodedPassword = passwordEncoder.encode(dto.getPassword());
+    user.setPassword(encodedPassword);
+    user.setRole(role);
+    user.setLevel(defaultLevel);
+    user.setExp(0);
+    user.setCreatedAt(LocalDate.now());
+    user.setDeletedAt(null);
 
-        User user = mapper.map(dto, User.class);
-        Level defaultLevel = levelRepository.findFirstByOrderByLevelIdAsc()
-            .orElseThrow(() -> new IllegalStateException("기본 레벨이 존재하지 않습니다."));
+    User savedUser = userRepository.save(user);
+    return savedUser.getUserId();
+}
 
-        String encodedPassword = passwordEncoder.encode(dto.getPassword());
-        user.setPassword(encodedPassword);
-        user.setRole(role);
-        user.setLevel(defaultLevel);
-        user.setExp(0);
-        user.setCreatedAt(LocalDate.now());
-        userRepository.save(user);
-    }
 
     public User findByEmail(String email) {
 
@@ -111,15 +115,15 @@ public class UserService implements UserDetailsService{
 
         List<UserDto> activeUsers = users.stream()
             .filter(user -> user.getDeletedAt() == null && !user.getRole().name().equals("ROLE_ADMIN"))
-            .collect(Collectors.toList());
+            .toList();
 
         List<UserDto> deletedUsers = users.stream()
             .filter(user -> user.getDeletedAt() != null)
-            .collect(Collectors.toList());
+            .toList();
 
         List<UserDto> adminUsers = users.stream()
             .filter(user -> user.getRole().name().equals("ROLE_ADMIN") && user.getDeletedAt() == null)
-            .collect(Collectors.toList());
+            .toList();
 
         Map<String, List<UserDto>> result = new HashMap<>();
         result.put("activeUsers", activeUsers);
@@ -148,4 +152,21 @@ public class UserService implements UserDetailsService{
         userRepository.save(user);
     }
 
+
+    public void receiveInterest(Long userId, Long roleId, List<Long> skillIds) {
+        User user = userRepository.findByUserId(userId)
+            .orElseThrow(() -> new RuntimeException("User not found"));
+
+        Interest role =interestRepository.findById(roleId)
+            .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 직무입니다."));
+
+        userInterestRepository.save(new UserInterest(user, role));
+
+        for (Long skillId : skillIds) {
+            Interest skill = interestRepository.findById(skillId)
+                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 기술 ID입니다: " + skillId));
+
+            userInterestRepository.save(new UserInterest(user, skill));
+        }
+    }
 }
